优化小数点

--- a/WebContent/demo/village_order_heat_demo.html
+++ b/WebContent/demo/village_order_heat_demo.html
@@ -574,7 +574,7 @@ function initData(){
 	          			  		        strokeWeight: 0,    //线宽
 	          			  		        fillColor: color, //填充色
 	          			  		        fillOpacity: 0.7,//填充透明度
-	          			  		        extData:{"count":countrandom,"name":tinyVillageInfo.name,"storeName":tinyVillageInfo.storeName}
+	          			  		        extData:{"count":countrandom.toFixed(2),"name":tinyVillageInfo.name,"storeName":tinyVillageInfo.storeName}
 	           				 		});
 	           						vallagePolygon.setMap(map);
 	          					}else{
