--- a/WebContent/crm/518.html
+++ b/WebContent/crm/518.html
@@ -29,47 +29,49 @@
   <script src="IE 9/respond.min.js"></script>
   <![endif]-->
   <style>
-    body{background: url("dist/518img/img2.gif") no-repeat center; background-size: cover; overflow: auto;}
-    section{min-width: 1320px; margin: 0 auto; position: relative; padding: 0 20px;}
+    body{ overflow: auto; min-height: 100%;}
+    section{min-width: 1320px; margin: 0 auto; position: relative; padding: 0 20px; z-index: 11;clear: both;overflow: hidden;background: url("dist/518img/518-bg3.jpg") no-repeat top center; background-size: 100% 100%; min-height: 100%;}
     p{margin: 0;}
-    .carnival_l,.carnival_r{width: 22%; padding-top: 30px; position: relative;}
-    .carnival_c{width: 50%; margin: 0 1%; padding-top: 85px; position: relative;}
-    .carnival_c img{height: 95px;}
+    .carnival_l,.carnival_r{width: 20%; padding-top: 30px; position: relative;}
+    .carnival_c{width: 60%; padding-top: 65px; position: relative;}
+    .activity-logo img{max-height: 170px; padding-left: 20px;}
+    .activity-img  img{max-height: 60px; margin-left: 22%;}
+    .sec_bg img:nth-child(1){ height: 23px;}
+    .sec_bg img:nth-child(2){ height: 20px;}
 
     /*翻页效果*/
-    .dataStatistics{cursor: pointer; color: #fff; font-family: Trebuchet MS; text-align: center; position: relative; font-size: 100px; line-height: 115px; margin-top: 10px;}
+    .dataStatistics{cursor: pointer; color: #fff; font-family: Trebuchet MS; text-align: center; position: relative; font-size: 95px; line-height: 95px; width: 70%;}
     .data_new{position: relative; width: 100%}
-    .digit_set{float: none!important;border:0; border-radius: 4px; perspective: 200px; height: 115px!important; margin: 0 -3px!important; width: 75px!important;}
-    .digit_wrap{line-height: 115px;}
-    .dataStatistics .digit > div.digit_top, .dataStatistics .digit > div.shadow_top{background-color: #6f15ae; border-radius: 4px; width: 73px;}
-    .dataStatistics .digit > div.digit_bottom, .dataStatistics .digit > div.shadow_bottom{background-color: #6f15ae; border-radius: 4px; text-align: center; width: 73px;}
-    .dataStatistics:hover .digit_set{box-shadow: 0 0 16px 2px #186ff0}
-    .dataStatistics .digit > div.digit_bottom .digit_wrap,.dataStatistics .digit > div.shadow_bottom .digit_wrap{margin-top: -80%; line-height: 115px;}
+    .digit_set{float: none!important;border:0; border-radius: 4px; perspective: 200px; height: 95px!important; margin: 0 -10px!important; width: 65px!important;}
+    .digit_wrap{line-height: 95px;}
+    .dataStatistics .digit > div.digit_top, .dataStatistics .digit > div.shadow_top{background-color: #6f15ae; border-radius: 4px; width: 63px;}
+    .dataStatistics .digit > div.digit_bottom, .dataStatistics .digit > div.shadow_bottom{background-color: #6f15ae; border-radius: 4px; text-align: center; width: 63px;}
+    /*.dataStatistics:hover .digit_set{box-shadow: 0 0 16px 2px #186ff0}*/
+    .dataStatistics .digit > div.digit_bottom .digit_wrap,.dataStatistics .digit > div.shadow_bottom .digit_wrap{margin-top: -75%; line-height: 95px;}
     .douhao{width: 12px; height: 15px; background: url("dist/518img/douhao_518.png") no-repeat; display: inline-block; margin: 0 -10px}
-    .time{font-size: 18px; color: #fff; margin-right: 30px; margin-top: 10px;}
-    .conusers{color: #fff; font-size: 18px; margin-top: 60px;}
+    .time{font-size: 18px; color: #fff; margin-top: 3%; margin-right: 27%; letter-spacing: 4px;}
+    .conusers{color: #fff; font-size: 18px; margin: 20px auto 0 auto; width: 60%;}
     .conusers span{font-size: 34px; color: #f9bf0e; font-family: "Century Gothic";}
     .conusers div p:nth-child(2){text-transform: uppercase; font-size: 24px; color: rgba(255,255,255,0.3); font-family: "Times New Roman"; margin-top: -7px;}
-	#main1{ position: absolute; bottom: 0;}
 
     /*左边*/
     .title{font-size: 20px; color: #fff600;}
     .com_con::before, .com_con::after {position: absolute;top: 0;bottom: 0;left: 0;right: 0;}
-    .com_con {width: 368px;height: 388px;margin-top: 30px;color: #69ca62;box-shadow: inset 0 0 0 1px rgba(105, 202, 98, 0.5);position: relative;}
-    .com_con::before, .com_con::after {content: '';z-index: -1;margin: -5%;box-shadow: inset 0 0 0 2px; animation: clipMe 8s linear infinite;}
+    .com_con {width: 368px;height: 388px;margin-top: 30px;color: #69ca62;position: relative;}
+    .com_con::before, .com_con::after {content: '';z-index: -1;margin: -1%;box-shadow: inset 0 0 0 2px; animation:clipMe 8s linear infinite;}
     .com_con::before {animation-delay: -4s;}
     @keyframes clipMe {
       0%, 100% {
-        clip: rect(0px, 420.0px, 2px, 0px);
+        clip: rect(0px, 410.0px, 2px, 0px);
       }
       25% {
-        clip: rect(0px, 2px, 420.0px, 0px);
+        clip: rect(0px, 2px, 410.0px, 0px);
       }
       50% {
-        clip: rect(438.0px, 420.0px, 440.0px, 0px);
+        clip: rect(428.0px, 410.0px, 420.0px, 0px);
       }
       75% {
-        clip: rect(0px, 438.0px, 440.0px, 438.0px);
+        clip: rect(0px, 418.0px, 420.0px, 418.0px);
       }
     }
     .com_tit{color: #fff;}
@@ -117,7 +119,7 @@
 <body class="hold-transition skin-blue sidebar-mini">
 
 <section>
-  <div class="sec_bg"></div>
+  <div class="sec_bg"><img src="dist/img/logo1.png"><img src="dist/518img/hdlogo.png"> </div>
   <div class="carnival_l pull-left">
     <div class="commodity">
       <div class="title">商品销量/销售额</div>
@@ -294,11 +296,11 @@
         </div>
       </div>
     </div>
-    <div id="main2" style="height: 400px;"></div>
+    <div id="main2" style="height: 450px;"></div>
   </div>
   <div class="carnival_c pull-left" id="carnival_c">
-    <div class="text-center"><img src="dist/518img/img3.png"></div>
-    <div class="text-right time" id="now_time">00:00:00</div>
+    <div class="text-center activity-logo"><img src="dist/518img/img1.png"></div>
+    <div class="activity-img" style="margin-top: -10px;"><img src="dist/518img/img3.png"></div>
     <div class="dataStatistics">
       <div class="data_new">
         <div class="digit_set"></div>
@@ -322,7 +324,8 @@
         <p>新用户占比：<span id="new_customer_percent">Loading</span></p>
       </div>
     </div>
-    <div id="main1" style="height: 350px; width: 100%; margin: 0 auto;"></div>
+    <div class="text-right time" id="now_time">00:00:00</div>
+    <div id="main1" style="height: 320px; width: 100%; margin: 0 auto;"></div>
   </div>
   <div class="carnival_r pull-right">
     <div class="proportion">
@@ -519,7 +522,6 @@
       </div>
     </div>
     <div class="relitu">
-    	
       <div id="mapContainer" style="background-color:rgba(0,0,0,0.5);width: 100%;height:100%;"></div>
       <div class="col-sm-5 has-warning form-group" style="padding: 0 5px 0 0;">
           <select class="form-control select2" id="citySelect">
@@ -569,8 +571,8 @@
     if (document.documentElement && document.documentElement.clientHeight)
       winHeight = document.documentElement.clientHeight;
     //DIV高度为浏览器窗口的高度
-    document.getElementById("carnival_c").style.height= winHeight +"px";
-    document.getElementById("main1").style.height= winHeight/2 +"px";
+    //document.getElementById("carnival_c").style.height= winHeight +"px";
+    document.getElementById("main1").style.height= winHeight/2 - 40 +"px";
   }
   window.onresize=autodivheight; //浏览器窗口发生变化时同时变化DIV高度
 
@@ -1140,7 +1142,7 @@ var convertData1 = function (data) {
     if(rate != 100){
       //如何让页面的缩放比例自动为100,'transform':'scale(1,1)'没有用，又无法自动条用键盘事件，目前只能提示让用户如果想使用100%的比例手动去触发按ctrl+0
       console.log(1)
-      alert('当前页面不是100%显示，请按键盘ctrl+0恢复100%显示标准，以防页面显示错乱！')
+      //alert('当前页面不是100%显示，请按键盘ctrl+0恢复100%显示标准，以防页面显示错乱！')
     }
   }
   
@@ -1237,7 +1239,12 @@ Date.prototype.format=function(fmt) {
 	  initProductRankingData();
 	  initEshopRankingData();
 	  initCityRankingData();
-	  timeTicket = setInterval(timerData, 1000);		  
+	  timeTicket = setInterval(timerData, 1000);
+	  timeTicket = setInterval(turnoverAndUserData, 3000);
+	  timeTicket = setInterval(initHourData, 60000);
+	  timeTicket = setInterval(initProductRankingData, 300000);
+	  timeTicket = setInterval(initEshopRankingData, 300000);
+	  timeTicket = setInterval(initCityRankingData, 300000);
   });
   
   var festivalDate = new Date().format("yyyy-MM-dd");
@@ -1310,14 +1317,10 @@ Date.prototype.format=function(fmt) {
   function timerData(){
 	  if(new Date() > new Date(fix_time)){
 		  now_time = new Date(fix_time);
+		  window.clearInterval(timeTicket);
 		  window.clearInterval(mapTimeTicket);
 	  }else{
 		  now_time = new Date();
-		  timeTicket = setInterval(turnoverAndUserData, 3000);
-		  timeTicket = setInterval(initHourData, 60000);
-		  timeTicket = setInterval(initProductRankingData, 300000);
-		  timeTicket = setInterval(initEshopRankingData, 300000);
-		  timeTicket = setInterval(initCityRankingData, 300000);
 	  }
 	  $("#now_time").html((now_time.getHours() < 10 ? '0' + now_time.getHours():now_time.getHours())+":"+(now_time.getMinutes() < 10 ? '0' + now_time.getMinutes():now_time.getMinutes())+":"+(now_time.getSeconds() < 10 ? '0' + now_time.getSeconds():now_time.getSeconds()));
   }
@@ -1560,7 +1563,7 @@ Date.prototype.format=function(fmt) {
 	    zoom : 5,
 	});
 	map.setCity("北京");
-	map.setMapStyle('amap://styles/'+"fresh");
+	map.setMapStyle('amap://styles/'+"darkblue");
 	//FestivalStatManager
 	$(function(){
 		getCity();
